--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,6 +92,7 @@
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:progressDrawable="@drawable/seekbar_progress"/>
+        android:progressDrawable="@drawable/seekbar_progress"
+        android:visibility="visible" />
 
 </LinearLayout>
